Bug#27345 Incorrect data returned when range-read from utf8_danish_ci indexes Problem: like_range() returned wrong ranges for contractions (like 'ch' in Czech'). Fix: adding a special code to handle tricky cases: - contraction head followed by a wild character - full contraction - contraction part followed by another contraction part,   but they are not a contraction together.

mysql-test/r/ctype_uca.result:
  Adding test case
mysql-test/t/ctype_uca.test:
  Adding test case
strings/ctype-mb.c:
  Adding test case
strings/ctype-uca.c:
  Allocate additional 256 bytes for flags "is contraction part".
strings/ctype-ucs2.c:
  Adding test case